reformatting file structure

--- a/gallery.html
+++ b/gallery.html
@@ -81,8 +81,8 @@
                 <hr>
                 <div class="col l12 imgs">
                     <!-- fill these with logo icons of technologies used in the category -->
-                    <a><img class="responsive-img" src="../images/html5.png">HTML5</a>
-                    <a><img class="responsive-img" src="../images/jsxlogo.png">JSX</a>
+                    <a><img class="responsive-img" src="./images/html5.png">HTML5</a>
+                    <a><img class="responsive-img" src="./images/jsxlogo.png">JSX</a>
                 </div>
             </div>
             <div class="row">
@@ -90,9 +90,9 @@
                 <hr>
                 <div class="col l12 imgs">
                     <!-- fill these with logo icons of technologies used in the category -->
-                    <a><img class="responsive-img" src="../images/css3_logo.png">CSS3</a>
-                    <a><img class="responsive-img" src="../images/bootstrap.jpg">Bootstrap</a>
-                    <a><img class="responsive-img" src="../images/materialize.png">Materialize</a>
+                    <a><img class="responsive-img" src="./images/css3_logo.png">CSS3</a>
+                    <a><img class="responsive-img" src="./images/bootstrap.jpg">Bootstrap</a>
+                    <a><img class="responsive-img" src="./images/materialize.png">Materialize</a>
                 </div>
             </div>
             <div class="row">
@@ -100,10 +100,10 @@
                 <hr>
                 <div class="col l12 imgs">
                     <!-- fill these with logo icons of technologies used in the category -->
-                    <a><img class="responsive-img" src="../images/javascript.png">JavaScript</a>
-                    <a><img class="responsive-img" src="../images/jquery.png">jQuery</a>
-                    <a><img class="responsive-img" src="../images/reactjs.png">React.js</a>
-                    <a><img class="responsive-img" src="../images/nodejs.png">Node.js</a>
+                    <a><img class="responsive-img" src="./images/javascript.png">JavaScript</a>
+                    <a><img class="responsive-img" src="./images/jquery.png">jQuery</a>
+                    <a><img class="responsive-img" src="./images/reactjs.png">React.js</a>
+                    <a><img class="responsive-img" src="./images/nodejs.png">Node.js</a>
                 </div>
             </div>
             <div class="row">
@@ -111,22 +111,22 @@
                 <hr>
                 <div class="col l12 imgs">
                     <!-- fill these with logo icons of technologies used in the category -->
-                    <a><img class="responsive-img" src="../images/MySql.png">My Sql</a>
-                    <a><img class="responsive-img" src="../images/mongodb.png">Mongo DB</a>
-                    <a><img class="responsive-img" src="../images/npmlogo.png">NPM</a>
-                    <a><img class="responsive-img" src="../images/expresslogo.png">Express</a>
-                    <a><img class="responsive-img" src="../images/sequelize.png">Sequelize</a>
+                    <a><img class="responsive-img" src="./images/MySql.png">My Sql</a>
+                    <a><img class="responsive-img" src="./images/mongodb.png">Mongo DB</a>
+                    <a><img class="responsive-img" src="./images/npmlogo.png">NPM</a>
+                    <a><img class="responsive-img" src="./images/expresslogo.png">Express</a>
+                    <a><img class="responsive-img" src="./images/sequelize.png">Sequelize</a>
                 </div>
             </div>
             <div class="row">
                 <h3>Tools</h3>
                 <hr>
                 <div class="col l12 imgs">
-                    <a><img class="responsive-img" src="../images/vscode.png">VSCode</a>
-                    <a><img class="responsive-img" src="../images/sqlpro.png">Sql Pro</a>
-                    <a><img class="responsive-img" src="../images/robo3t.png">Robo 3T</a>
-                    <a><img class="responsive-img" src="../images/herokulogo.png">Heroku</a>
-                    <a><img class="responsive-img" src="../images/githublogo.png">GitHub</a>
+                    <a><img class="responsive-img" src="./images/vscode.png">VSCode</a>
+                    <a><img class="responsive-img" src="./images/sqlpro.png">Sql Pro</a>
+                    <a><img class="responsive-img" src="./images/robo3t.png">Robo 3T</a>
+                    <a><img class="responsive-img" src="./images/herokulogo.png">Heroku</a>
+                    <a><img class="responsive-img" src="./images/githublogo.png">GitHub</a>
                 </div>
             </div>
         </div>
