--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <a href="#!email"><span class="white-text email">wilmiller@gmail.com</span></a>
         </div></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect waves-light amber darken-4" href="about.html">About</a></li>
+        <li><a class="waves-effect waves-light amber darken-4" href="index.html">About</a></li>
         <br>
         <li><a class="waves-effect waves-light amber darken-4" href="contact.html">Contact</a></li>
         <br>
